fix: top bar z-index

--- a/resources/sass/components/navbar.scss
+++ b/resources/sass/components/navbar.scss
@@ -76,5 +76,5 @@
 }
 
 .top-bar-wrapper {
-  @apply sticky top-0 z-40 flex flex-row items-center justify-between w-full h-16 px-5 py-2 bg-gray-700;
+  @apply sticky top-0 z-50 flex flex-row items-center justify-between w-full h-16 px-5 py-2 bg-gray-700;
 }
